fixing overlap stuff

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ h2 {
   margin: 0 auto;
   padding: 50px;
   padding-left: 3%;
+  padding-right: 4%;
   overflow: hidden;
 }
 
